--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pizza.html">Pizza</a>
+        <ul>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+            <li><a href="./recipes/aglio-e-olio.html">Aglio e Olio</a></li>
+            <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+        </ul>
+        
     </body>
 </html>
